# ai-cpp-unit-test-demo

./: .gitignore  AGENTS.md  CMakeLists.txt  OPENCODE_GUIDE.md  README.md  opencode.json
.opencode/skills/cpp-unit-test/: SKILL.md
include/: calculator.h  data_parser.h  string_utils.h
src/: calculator.cpp  data_parser.cpp  string_utils.cpp
tests/: CMakeLists.txt  test_calculator.cpp  test_data_parser.cpp  test_string_utils.cpp
